--- a/.gitignore
+++ b/.gitignore
@@ -7314,3 +7314,89 @@ VFX/Vehicles/Weapon/TLS/mesh/SM_TLS_diffusion02.uasset
 VFX/Vehicles/Weapon/TLS/mesh/SM_TLS_diffusion1.uasset
 VFX/Vehicles/Weapon/TLS/mesh/SM_TLS_projectile_root.uasset
 VFX/Vehicles/Weapon/TLS/mesh/SM_TLS_projectile_tip.uasset
+Maps/Mission/ex01/ex01_Lighting.umap
+Maps/MesaValley/MES_ENV_Terrain2.umap
+Maps/MesaValley/MES_ENV_Terrain.umap
+Maps/MesaValley/MES_ENV_Static_Props.umap
+Maps/MesaValley/MES_ENV_Static_Buildings.umap
+Maps/MesaValley/MES_ENV_RockHill.umap
+Maps/MesaValley/MES_ENV_Foliage_Props.umap
+Maps/MesaValley/MES_ENV_Foliage_Buildings.umap
+Environment/MesaValley/Terrain/Textures/MES_TER_0208_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0207_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0206_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0205_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0204_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0203_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0202_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0201_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0112A_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0112_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0111A_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0111_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0110A_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0110_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0109_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0108A_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0108_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0107A_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0107_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0106_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0105_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0104_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0103_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0102A_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0102_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0101A_D.uasset
+Environment/MesaValley/Terrain/Textures/MES_TER_0101_D.uasset
+Environment/MesaValley/Terrain/MES_TER_0208.uasset
+Environment/MesaValley/Terrain/MES_TER_0207.uasset
+Environment/MesaValley/Terrain/MES_TER_0206.uasset
+Environment/MesaValley/Terrain/MES_TER_0205.uasset
+Environment/MesaValley/Terrain/MES_TER_0204.uasset
+Environment/MesaValley/Terrain/MES_TER_0203.uasset
+Environment/MesaValley/Terrain/MES_TER_0202.uasset
+Environment/MesaValley/Terrain/MES_TER_0201.uasset
+Environment/MesaValley/Terrain/MES_TER_0112A.uasset
+Environment/MesaValley/Terrain/MES_TER_0112.uasset
+Environment/MesaValley/Terrain/MES_TER_0111.uasset
+Environment/MesaValley/Terrain/MES_TER_0110.uasset
+Environment/MesaValley/Terrain/MES_TER_0109.uasset
+Environment/MesaValley/Terrain/MES_TER_0108.uasset
+Environment/MesaValley/Terrain/MES_TER_0107A.uasset
+Environment/MesaValley/Terrain/MES_TER_0107.uasset
+Environment/MesaValley/Terrain/MES_TER_0106.uasset
+Environment/MesaValley/Terrain/MES_TER_0105.uasset
+Environment/MesaValley/Terrain/MES_TER_0104.uasset
+Environment/MesaValley/Terrain/MES_TER_0103.uasset
+Environment/MesaValley/Terrain/MES_TER_0102A.uasset
+Environment/MesaValley/Terrain/MES_TER_0102.uasset
+Environment/MesaValley/Terrain/MES_TER_0101.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0208_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0207_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0206_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0205_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0204_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0203_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0202_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0201_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0112A_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0112_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0111A_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0111_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0110A_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0110_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0109_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0108A_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0108_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0107A_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0107_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0106_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0105_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0104_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0103_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0102A_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0102_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0101A_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_0101_Inst.uasset
+Environment/MesaValley/Terrain/Materials/MES_TER_00_Inst.uasset
