--- a/.gitignore
+++ b/.gitignore
@@ -7400,3 +7400,4 @@ Environment/MesaValley/Terrain/Materials/MES_TER_0102_Inst.uasset
 Environment/MesaValley/Terrain/Materials/MES_TER_0101A_Inst.uasset
 Environment/MesaValley/Terrain/Materials/MES_TER_0101_Inst.uasset
 Environment/MesaValley/Terrain/Materials/MES_TER_00_Inst.uasset
+Vehicles/Aircraft/su37/07/su37_07_D.uasset
