--- a/.gitignore
+++ b/.gitignore
@@ -7401,3 +7401,29 @@ Environment/MesaValley/Terrain/Materials/MES_TER_0101A_Inst.uasset
 Environment/MesaValley/Terrain/Materials/MES_TER_0101_Inst.uasset
 Environment/MesaValley/Terrain/Materials/MES_TER_00_Inst.uasset
 Vehicles/Aircraft/su37/07/su37_07_D.uasset
+Vehicles/Aircraft/Common/Textures/Aircraft_Dam_N.uasset
+Vehicles/Aircraft/Common/Textures/Aircraft_Dam_MREC.uasset
+Vehicles/Aircraft/Common/Textures/Aircraft_Dam_Level_N.uasset
+Vehicles/Aircraft/Common/Textures/Aircraft_Dam_Level_D.uasset
+Vehicles/Aircraft/Common/Textures/Aircraft_Dam_Detail_N.uasset
+Vehicles/Aircraft/Common/Textures/Aircraft_Dam_D.uasset
+Vehicles/Aircraft/typn/06/typn_06_MREC.uasset
+Vehicles/Aircraft/typn/06/typn_06_D.uasset
+Vehicles/Aircraft/typn/00/typn_00_N.uasset
+Vehicles/Aircraft/su37/07/su37_07_MREC.uasset
+Vehicles/Aircraft/su37/00/su37_00_N.uasset
+Vehicles/Aircraft/m31b/06/m31b_06_MREC.uasset
+Vehicles/Aircraft/m31b/06/m31b_06_Inst.uasset
+Vehicles/Aircraft/m31b/06/m31b_06_Decal_Inst.uasset
+Vehicles/Aircraft/m31b/06/m31b_06_D.uasset
+Vehicles/Aircraft/m31b/06/m31b_06_CP_Inst.uasset
+Vehicles/Aircraft/m31b/00/m31b_00_N.uasset
+Vehicles/Aircraft/j39e/06/j39e_06_MREC.uasset
+Vehicles/Aircraft/j39e/06/j39e_06_D.uasset
+Vehicles/Aircraft/j39e/00/j39e_00_N.uasset
+Vehicles/Aircraft/f18f/09/f18f_09_MREC.uasset
+Vehicles/Aircraft/f18f/09/f18f_09_D.uasset
+Vehicles/Aircraft/f18f/00/f18f_00_N.uasset
+Vehicles/Aircraft/f14d/08/f14d_08_MREC.uasset
+Vehicles/Aircraft/f14d/08/f14d_08_D.uasset
+Vehicles/Aircraft/f14d/00/f14d_00_N.uasset
