--- a/.gitignore
+++ b/.gitignore
@@ -7427,3 +7427,27 @@ Vehicles/Aircraft/f18f/00/f18f_00_N.uasset
 Vehicles/Aircraft/f14d/08/f14d_08_MREC.uasset
 Vehicles/Aircraft/f14d/08/f14d_08_D.uasset
 Vehicles/Aircraft/f14d/00/f14d_00_N.uasset
+Vehicles/Aircraft/f04e/00/f04e_00_N.uasset
+Vehicles/Aircraft/f04e/06/f04e_06_D.uasset
+Vehicles/Aircraft/f04e/06/f04e_06_MREC.uasset
+Vehicles/Aircraft/f15m/00/f15m_00_N.uasset
+Vehicles/Aircraft/f15m/06/f15m_06_D.uasset
+Vehicles/Aircraft/f15m/06/f15m_06_MREC.uasset
+Vehicles/Aircraft/f16c/00/f16c_00_N.uasset
+Vehicles/Aircraft/f16c/08/f16c_08_D.uasset
+Vehicles/Aircraft/f16c/08/f16c_08_MREC.uasset
+Vehicles/Aircraft/f16x/00/f16x_00_N.uasset
+Vehicles/Aircraft/f16x/06/f16x_06_D.uasset
+Vehicles/Aircraft/f16x/06/f16x_06_MREC.uasset
+Vehicles/Aircraft/f22a/00/f22a_00_N.uasset
+Vehicles/Aircraft/f22a/06/f22a_06_D.uasset
+Vehicles/Aircraft/f22a/06/f22a_06_MREC.uasset
+Vehicles/Aircraft/rflm/00/rflm_00_N.uasset
+Vehicles/Aircraft/rflm/07/rflm_07_D.uasset
+Vehicles/Aircraft/rflm/07/rflm_07_MREC.uasset
+Vehicles/Aircraft/su47/00/su47_00_N.uasset
+Vehicles/Aircraft/su47/08/su47_08_D.uasset
+Vehicles/Aircraft/su47/08/su47_08_MREC.uasset
+Vehicles/Aircraft/yf23/00/yf23_00_N.uasset
+Vehicles/Aircraft/yf23/06/yf23_06_D.uasset
+Vehicles/Aircraft/yf23/06/yf23_06_MREC.uasset
